# ChangeLog for net-dns/unbound
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/ChangeLog,v 1.21 2011/04/11 15:01:36 matsuu Exp $

*unbound-1.4.9 (11 Apr 2011)

  11 Apr 2011; MATSUU Takuto <matsuu@gentoo.org> +unbound-1.4.9.ebuild,
  metadata.xml:
  Version bumepd, bug #362013. Added proxied developer.

*unbound-1.4.8 (25 Jan 2011)

  25 Jan 2011; MATSUU Takuto <matsuu@gentoo.org> +unbound-1.4.8.ebuild:
  Version bumped. Added statis-libs USE flag.

*unbound-1.4.7-r1 (07 Dec 2010)

  07 Dec 2010; MATSUU Takuto <matsuu@gentoo.org> +unbound-1.4.7-r1.ebuild:
  Added net-dns/dnssec to RDEPEND, bug #347415.

  15 Nov 2010; MATSUU Takuto <matsuu@gentoo.org> unbound-1.4.6.ebuild,
  unbound-1.4.7.ebuild:
  Fixed dependency, bug #345253.

*unbound-1.4.7 (09 Nov 2010)

  09 Nov 2010; MATSUU Takuto <matsuu@gentoo.org> -unbound-1.4.4.ebuild,
  -unbound-1.4.5.ebuild, +unbound-1.4.7.ebuild, metadata.xml:
  Version bumped. Added gost USE flag. Removed old versions.

*unbound-1.4.6 (05 Aug 2010)

  05 Aug 2010; MATSUU Takuto <matsuu@gentoo.org> +unbound-1.4.6.ebuild:
  Version bumped.

*unbound-1.4.5 (17 Jun 2010)

  17 Jun 2010; MATSUU Takuto <matsuu@gentoo.org> +unbound-1.4.5.ebuild:
  Version bumped. Removed libevent USE flag. Fixed python handling.

  23 Apr 2010; Fabian Groffen <grobian@gentoo.org> unbound-1.4.4.ebuild:
  Marked ~x64-macos, bug #312015

*unbound-1.4.4 (23 Apr 2010)

  23 Apr 2010; MATSUU Takuto <matsuu@gentoo.org> -unbound-1.4.1.ebuild,
  +unbound-1.4.4.ebuild:
  Version bumped. Fixed #312015 and #315519. Removed old version.

  29 Mar 2010; Markus Meier <maekke@gentoo.org> unbound-1.4.3.ebuild:
  amd64 stable, bug #309117

  18 Mar 2010; Christian Faulhammer <fauli@gentoo.org> unbound-1.4.3.ebuild:
  stable x86, security bug 309117

  18 Mar 2010; Christian Faulhammer <fauli@gentoo.org> unbound-1.4.3.ebuild:
  add app-text/wdiff as prerequisite for tests

*unbound-1.4.3 (12 Mar 2010)
