@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/Attic/unbound-1.4.8.ebuild,v 1.1 2011/01/25 14:20:31 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/unbound/Attic/unbound-1.4.8.ebuild,v 1.2 2011/05/07 17:03:23 tomka Exp $
 
 EAPI="3"
 PYTHON_DEPEND="python? 2"
@@ -12,7 +12,7 @@ SRC_URI="http://unbound.net/downloads/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 ~x86 ~x64-macos"
+KEYWORDS="~amd64 x86 ~x64-macos"
 IUSE="debug gost python static-libs test threads"
 
 RDEPEND="dev-libs/expat
